Changes to tester class, and getIterator frame, added removeFirst and removeLast.